tests/sources/invalid/types/semantic_unary_incdec_undefined.fire
// Semantic type error: increment/decrement on an undefined variable.

void unary_incdec_undefined() {
    undefinedCounter++;  //~ ERROR FS-PARSE-0003 @5
}
